--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
     "react-tsparticles": "^2.12.2",
+    "sweetalert2": "^11.14.5",
     "tsparticles": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
